<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_course"
    android:name="navy1103.tacoma.uw.edu.webservicelab.CourseAddFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseDetailFragment">

    <EditText
        android:id="@+id/add_course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_id_hint" />

    <EditText
        android:id="@+id/add_course_short_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_short_desc_hint" />

    <EditText
        android:id="@+id/add_course_long_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_long_desc_hint" />

    <EditText
        android:id="@+id/add_course_prereqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_prereqs_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="addCourse"
        android:id="@+id/add_course_button"
        android:text="@string/add_course_text" />


</LinearLayout>
